--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,18 @@
-name: my_project
+name: lang_learn
 description: A new Flutter project
 
 version: 1.0.0+1
 
+environment:
+  sdk: "^2.12.0"
+
 dependencies:
   flutter:
     sdk: flutter
+
+  cupertino_icons: ^1.0.2
+  translator: ^0.1.7
+  flutter_lang_learn: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -14,5 +21,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-environment:
-  sdk: "^2.12.0"
+  assets:
+    - assets/
